diseño responsivo tablet 768 pixeles

--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
                 </div>
             </div>
         </section>
+
+
         <section id="formacion" class="formacion__container">
             <div class="formacion">
                 <h1 class="formacion__title">formación académica</h1>
@@ -213,7 +215,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="experience__item reverse seperation-top">
+                <div class="experience__item reverse seperation-top-bottom">
                     <div class="item__img--container">
                         <img src="./assets/img/experience-img/juego-de-ahorcado.jpg" alt="imagen juego del ahorcado"
                             class="experience__item--img">
