--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <img src="./assets/img/contacto/telefono-contacto.png " alt="telefono" class="contact__img">
                 </div>
                 <div class="contact__container--form">
-                    <form action="" class="contact__form">
+                    <form action="" class="contact__form" autocomplete="off">
                         <legend class="contact__title">contacto</legend>
                         <p class="contact__text">¿Quieres contactarme?</p>
                         <p class="contact__text">Complete el siguiente formulario y me pondré en contacto con usted lo
@@ -257,7 +257,6 @@
                             <div class="form__group">
                                 <input type="text" id="name" class="form__input" placeholder=" " required data-tipo="nombre">
                                 <label for="name" class="form__label">Nombre:</label>
-                                <span class="form__line"></span>
                                 <span class="mensaje-error oculto">Error Default</span>
                             </div>
                         </div>
@@ -266,7 +265,6 @@
                             <div class="form__group">
                                 <input type="email" id="email" class="form__input" placeholder=" " required data-tipo="email">
                                 <label for="email" class="form__label">Email:</label>
-                                <span class="form__line"></span>
                                 <span class="mensaje-error oculto">Error Default</span>
                             </div>
                         </div>
@@ -275,7 +273,6 @@
                             <div class="form__group">
                                 <input type="text" id="asunto" class="form__input" placeholder=" " required data-tipo="asunto">
                                 <label for="asunto" class="form__label">Asunto:</label>
-                                <span class="form__line"></span>
                                 <span class="mensaje-error oculto">Error Default</span>
                             </div>
                         </div>
@@ -285,7 +282,6 @@
                             <div class="form__group">
                                 <textarea type="text" id="mensaje" class="form__textarea" placeholder=" " required data-tipo="mensaje"></textarea>
                                 <label for="mensaje" class="form__label">Mensaje:</label>
-                                <span class="form__line"></span>
                                 <span class="mensaje-error oculto">Error Default</span>
                             </div>
                         </div>
