animacion de texto label del formulario arreglado, validacion de formulario con JS terminado, se agrego texto en seccion sobre mi

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     <div class="sobre-mi__description--container">
                         <h1 class="sobre-mi__description--title">Hola, mi nombre es Ivan Azcurra y construyo paginas web
                         </h1>
-                        <p class="sobre-mi__description--text">Soy formado en .... lorem ipsum sit amet consectetur y
-                            actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</p>
+                        <p class="sobre-mi__description--text">
+                            Soy un programador web con formación en Alura y en Argentina programa. Tengo experiencia en el desarrollo de sitios web y aplicaciones web. He trabajado en equipos de desarrollo y he participado en proyectos de desarrollo web. He desarrollado sitios web y aplicaciones web usando HTML, CSS, JavaScript y Windows.</p>
                         <ul class="sobre-mi__description--list">
                             <li class="sobre-mi__description--item">
                                 <a class="sobre-mi__description--link" href="https://github.com/Ivan-Azcurra"
