--- a/index.html
+++ b/index.html
@@ -63,7 +63,14 @@
                         <h1 class="sobre-mi__description--title">Hola, mi nombre es Ivan Azcurra y construyo paginas web
                         </h1>
                         <p class="sobre-mi__description--text">
-                            Soy un programador web con formación en Alura y en Argentina programa. Tengo experiencia en el desarrollo de sitios web y aplicaciones web. He trabajado en equipos de desarrollo y he participado en proyectos de desarrollo web. He desarrollado sitios web y aplicaciones web usando HTML, CSS, JavaScript y Windows.</p>
+
+                            Tengo 25 años. Soy de Argentina y actualmente vivo en Chepes, La Rioja. Tengo formación en
+                            programación web de la plataforma Alura y en Argentina Programa. Estoy buscando una
+                            oportunidad de trabajo como programador web. Tengo experiencia en el desarrollo de sitios
+                            web y aplicaciones web, así como en el diseño y la implementación de bases de datos. También
+                            tengo conocimientos de HTML, CSS y JavaScript. Soy una persona muy dedicada y comprometida,
+                            y estoy seguro de que podré aportar mucho valor a tu empresa. Espero que me consideres para
+                            una entrevista. Gracias.</p>
                         <ul class="sobre-mi__description--list">
                             <li class="sobre-mi__description--item">
                                 <a class="sobre-mi__description--link" href="https://github.com/Ivan-Azcurra"
@@ -233,8 +240,12 @@
                         <h4 class="experience__item--title">juego creado con html, css y javaScript</h4>
                         <p class="experience__item--info">challenge oracle</p>
                         <div class="experience__buttons">
-                            <a class="experience__item--button-light" href="https://github.com/Ivan-Azcurra/Challenge-Oracle-ONE---Juego-del-ahorcado" target="_blank">repositório</a>
-                            <a class="experience__item--button" href="https://ivan-azcurra.github.io/Challenge-Oracle-ONE---Juego-del-ahorcado/" target="_blank">ver demo</a>
+                            <a class="experience__item--button-light"
+                                href="https://github.com/Ivan-Azcurra/Challenge-Oracle-ONE---Juego-del-ahorcado"
+                                target="_blank">repositório</a>
+                            <a class="experience__item--button"
+                                href="https://ivan-azcurra.github.io/Challenge-Oracle-ONE---Juego-del-ahorcado/"
+                                target="_blank">ver demo</a>
                         </div>
                     </div>
                 </div>
@@ -255,7 +266,8 @@
 
                         <div class="form__container">
                             <div class="form__group">
-                                <input type="text" id="name" class="form__input" placeholder=" " required data-tipo="nombre">
+                                <input type="text" id="name" class="form__input" placeholder=" " required
+                                    data-tipo="nombre">
                                 <label for="name" class="form__label">Nombre:</label>
                                 <span class="mensaje-error oculto">Error Default</span>
                             </div>
@@ -263,7 +275,8 @@
 
                         <div class="form__container">
                             <div class="form__group">
-                                <input type="email" id="email" class="form__input" placeholder=" " required data-tipo="email">
+                                <input type="email" id="email" class="form__input" placeholder=" " required
+                                    data-tipo="email">
                                 <label for="email" class="form__label">Email:</label>
                                 <span class="mensaje-error oculto">Error Default</span>
                             </div>
@@ -271,7 +284,8 @@
 
                         <div class="form__container">
                             <div class="form__group">
-                                <input type="text" id="asunto" class="form__input" placeholder=" " required data-tipo="asunto">
+                                <input type="text" id="asunto" class="form__input" placeholder=" " required
+                                    data-tipo="asunto">
                                 <label for="asunto" class="form__label">Asunto:</label>
                                 <span class="mensaje-error oculto">Error Default</span>
                             </div>
@@ -280,7 +294,8 @@
 
                         <div class="form__container">
                             <div class="form__group">
-                                <textarea type="text" id="mensaje" class="form__textarea" placeholder=" " required data-tipo="mensaje"></textarea>
+                                <textarea type="text" id="mensaje" class="form__textarea" placeholder=" " required
+                                    data-tipo="mensaje"></textarea>
                                 <label for="mensaje" class="form__label">Mensaje:</label>
                                 <span class="mensaje-error oculto">Error Default</span>
                             </div>
