--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
             });
         });
     </script>
-    <script type="module" src="/js/validaciones.js"></script>
-    <script type="module" src="/js/app.js"></script>
+    <script type="module" src="./js/validaciones.js"></script>
+    <script type="module" src="./js/app.js"></script>
 </body>
 
 </html>
